--- a/cuestionario_de_retroalimentacin.html
+++ b/cuestionario_de_retroalimentacin.html
@@ -58,10 +58,12 @@
 <div class="iDevice emphasis0" >
 <div id="ta46_127_2" class="block iDevice_content">
 <div class="exe-text"><p><img src="pro....jpg" alt="" width="249" height="187" style="display: block; margin-left: auto; margin-right: auto;" /></p>
-<p>Hemos finalizado nuestro recorrido sobre el mundo de los animales para retroalimentar lo visto anteriormente vamos a responder un cuestionario, cual te ayudara a fortalecer tus conocimientos.</p>
-<p>NOTA: Dar clic al siguiente enlace para responder el cuestionario final.</p>
-<p><iframe width="640" height="2266" src="https://docs.google.com/forms/d/e/1FAIpQLSfYK2RdGMrIAzPK5QF0tozS706CR2vuehH_a7Cj6EFXN3HDkg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe></p>
-<p>Felicitaciones por tu proceso sigue fortaleciendo tus conocimientos.</p>
+<p><strong>Hemos finalizado nuestro recorrido sobre el mundo de los animales para retroalimentar lo visto anteriormente vamos a responder un cuestionario el cuál te ayudara a fortalecer tus conocimientos.</strong></p>
+<p><strong>NOTA: A continuación encontrarás un cuestionario donde se reflejaran sus conocimiento adquiridos durante este mágico recorrido, fue un placer contar con su participación.</strong></p>
+<p></p>
+<p><iframe width="640" height="2337" src="https://docs.google.com/forms/d/e/1FAIpQLSfYK2RdGMrIAzPK5QF0tozS706CR2vuehH_a7Cj6EFXN3HDkg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe></p>
+<p></p>
+<p><strong>FELICITACIONES POR TODOS SUS ESFUERZOS EN ESTE RECORRIDO.</strong></p>
 <p><img src="final.jpg" alt="" width="379" height="506" style="display: block; margin-left: auto; margin-right: auto;" /></p></div>
 </div>
 </div>
