--- a/repaso.html
+++ b/repaso.html
@@ -58,21 +58,9 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">REPASO</h1></header>
-<article class="iDevice_wrapper ScrambledListIdevice em_iDevice em_iDevice_bulb" id="id12">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header"><h1 class="iDeviceTitle">Lista desordenada</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta12_132_2" class="block iDevice_content">
-
-</div>
-</div>
-</div>
-</div>
-</article>
 <article class="iDevice_wrapper ScrambledListIdevice em_iDevice em_iDevice_activity" id="id14">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header"><span class="iDeviceTitle">&nbsp;</span></header>
+<header class="iDevice_header"><h1 class="iDeviceTitle">LISTA DESORDENADA </h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta14_134_2" class="block iDevice_content">
@@ -210,7 +198,7 @@
 </article>
 <article class="iDevice_wrapper interactive-videoIdevice em_iDevice em_iDevice_presentation" id="id19">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header"><span class="iDeviceTitle">&nbsp;</span></header>
+<header class="iDevice_header"><h1 class="iDeviceTitle">VIDEO INTERACTIVO</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta19_139_2" class="block iDevice_content">
